--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="bg-gray-100 py-6">
         <div class="container mx-auto flex justify-between items-center space-x-5">
             <a href="#" class="flex items-center">
-                <img src="../logo/logo.png" class="h-6 w-6">
+                <img src="logo/logo.png" class="h-6 w-6">
 
                 <span class="ml-2 text-xl font-bold">Tasnimul</span>
             </a>
